--- a/part01/install/gotk-kustomization.yaml
+++ b/part01/install/gotk-kustomization.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1m0s
-  path: ./
+  path: ./clusters/foxtrot
   prune: true
   sourceRef:
     kind: GitRepository
